--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="">
                   <img src="images/logo.png" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact us</a>
+                    <a class="nav-link" href="#subscribe">Contact us</a>
                   </li>
                 </ul>
               </div>
@@ -61,6 +61,7 @@
                       <h1>Headphone Collection</h1>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Conssaepe excepturi molestias repudiandae libero a, vitae rerum qui recusandae?</p>
                     <h1 class="price">$600</h1>
+                    <button class="buy-now-button">Buy Now</button>    
                   </div>
                   <div class="col-md-5">
                     <img src="images/banner-images/headphone.png" class="d-block w-100">
@@ -73,6 +74,7 @@
                     <h1>X-Box Pro Version</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quia et quidem soluta illo veniam iure repellendus incidunt consequatur labore saepe excepturi molestias repudiandae libero a, vitae rerum qui recusandae?</p>
                     <h1 class="price">$750</h1>
+                    <button class="buy-now-button">Buy Now</button>    
                 </div>
                 <div class="col-md-5">
                     <img src="images/banner-images/xbox.png" class="d-block w-100">
@@ -90,6 +92,128 @@
         </button>
       </div>
 </div>
+<div class="container catagories">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="cat1 d-flex justify-content-between align-items-center">
+                <h1>Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+            </div>
+            
+        </div>
+        <div class="col-md-4">
+            <div class="d-flex justify-content-between align-items-center cat2">
+                <h1>Bag</h1>
+            <img src="images/categories/bag.png" alt="">
+            </div>
+            
+        </div>
+        <div class="col-md-4">
+            <div class="d-flex justify-content-between align-items-center cat3">
+                <h1>Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" id="shoes">
+    <h3>Shoes</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$120</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 320</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5>$320</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Max</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5>$350</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+</div>
+
+<div class="container" id="backpack">
+    <h3>Backpack</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Backpack</h5>
+              <h5>$125</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+                <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Backpack</h5>
+              <h5>$320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+                <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Backpack</h5>
+              <h5>$169</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+                <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+
+<div class="container d-flex justify-content-center align-items-center orange-bg" id="subscribe">
+    <div>
+        <h2>Let's stay in tounch</h2>
+    <h6>Get updates on sales speical and more!</h6>
+    <input class="form-control" type="text">
+    <button class="buy-now-button">submit</button>
+    </div>
+</div>
+<footer>
+    <p><small>© copyright 2020. All rights reserved by Panda commerce</small></p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
